# slidescom2pdf

./: .gitignore  pyproject.toml  slidescom2pdf.py
